--- a/locales/es.json
+++ b/locales/es.json
@@ -1,11 +1,11 @@
 {
     "menu_title" : "🚓 Alertas DEFCON",
     "menu_title_green" : "Alerta Verde",
-    "menu_description_green" : "Cambiar el estado DEFCON a alerta verde",
+    "menu_description_green" : "• Ciudadanos podrán realizar actividades con normalidad.\n• La policía podrá actuar según el reglamento.",
     "menu_title_yellow" : "Alerta Amarilla",
-    "menu_description_yellow" : "Cambiar el estado DEFCON a alerta amarilla",
+    "menu_description_yellow" : "• Ciudadanos podrán realizar actividades con prudencia.\n• La policía podrá realizar cacheos, identificar ciudadanos y verificar vehículos.",
     "menu_title_red" : "Alerta Roja",
-    "menu_description_red" : "Cambiar el estado DEFCON a alerta roja",
+    "menu_description_red" : "• Ciudadanos no podrán realizar actividades.\n• La policía podrá realizar cacheos, identificar ciudadanos, verificar vehículos y arrestar según necesidad. Toque de queda durante la noche",
 
     "command_help" : "Abrir menú de estado DEFCON",
 
@@ -17,12 +17,12 @@
 
     "webhook_public_title" : "Nuevo estado de Alerta DEFCON",
 
-    "webhook_public_title_green" : "Se ha establecido la alerta verde",
-    "webhook_public_description_green" : "webhook_public_description_green...",
-    "webhook_public_title_yellow" : "Se ha establecido la alerta amarilla",
-    "webhook_public_description_yellow" : "webhook_public_description_yellow...",
-    "webhook_public_title_red" : "Se ha establecido la alerta roja",
-    "webhook_public_description_red" : "webhook_public_description_red...",
+    "webhook_public_title_green" : "Alerta DEFCON Verde",
+    "webhook_public_description_green" : "La ciudadanía en general puede realizar sus actividades con normalidad",
+    "webhook_public_title_yellow" : "Alerta DEFCON Amarilla",
+    "webhook_public_description_yellow" : "La ciudadanía en general debe realizar sus actividades con prudencia, podrán ser retenidos para identificación, controles vehiculares, control de negocios y establecimientos públicos.",
+    "webhook_public_title_red" : "Alerta DEFCON Roja",
+    "webhook_public_description_red" : "La ciudadanía en general deberá realizar sus actividades con atención, controles vehiculares, control de negocios y establecimientos públicos. También se establecerá el **Toque de Queda** en horario Nocturno",
 
     "webhook_log_title" : "Actualización de estado DEFCON",
     "webhook_log_description" : "El oficial `%s` (CID: `%s`) ha cambiado el estado DEFCON."
